# MultClientRep

./: .gitignore  CLI.cpp  CLI.h  CMakeLists.txt  DistanceClass.cpp  DistanceClass.h  Knn.cpp  Knn.h  Makefile  README.md  Server.cpp  Server.h  client.cpp  client.out  commands.h  server.cpp  server.out
